prod/57.128.73.105 (2)/sudo iptables-save.txt
# Generated by iptables-save v1.8.7 on Thu Jan 23 11:39:41 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:f2b-dawantv - [0:0]
:f2b-nextcloud - [0:0]
:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-nextcloud -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-nextcloud -j DOCKER
-A FORWARD -i br-nextcloud ! -o br-nextcloud -j ACCEPT
-A FORWARD -i br-nextcloud -o br-nextcloud -j ACCEPT
-A FORWARD -o br-dawantv -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-dawantv -j DOCKER
-A FORWARD -i br-dawantv ! -o br-dawantv -j ACCEPT
-A FORWARD -i br-dawantv -o br-dawantv -j ACCEPT
-A FORWARD -o br-formateur -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-formateur -j DOCKER
-A FORWARD -i br-formateur ! -o br-formateur -j ACCEPT
-A FORWARD -i br-formateur -o br-formateur -j ACCEPT
-A FORWARD -o br-proxy-tier -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-proxy-tier -j DOCKER
-A FORWARD -i br-proxy-tier ! -o br-proxy-tier -j ACCEPT
-A FORWARD -i br-proxy-tier -o br-proxy-tier -j ACCEPT
-A FORWARD -o br-prom-agent -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-prom-agent -j DOCKER
-A FORWARD -i br-prom-agent ! -o br-prom-agent -j ACCEPT
-A FORWARD -i br-prom-agent -o br-prom-agent -j ACCEPT
-A FORWARD -o br-ha.c.e -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-ha.c.e -j DOCKER
-A FORWARD -i br-ha.c.e ! -o br-ha.c.e -j ACCEPT
-A FORWARD -i br-ha.c.e -o br-ha.c.e -j ACCEPT
-A DOCKER -d 10.0.10.11/32 ! -i br-prom-agent -o br-prom-agent -p tcp -m tcp --dport 9256 -j ACCEPT
-A DOCKER -d 10.0.72.11/32 ! -i br-ha.c.e -o br-ha.c.e -p tcp -m tcp --dport 9664 -j ACCEPT
-A DOCKER -d 10.0.10.12/32 ! -i br-prom-agent -o br-prom-agent -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 10.0.166.11/32 ! -i br-proxy-tier -o br-proxy-tier -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 10.0.166.11/32 ! -i br-proxy-tier -o br-proxy-tier -p udp -m udp --dport 443 -j ACCEPT
-A DOCKER -d 10.0.166.11/32 ! -i br-proxy-tier -o br-proxy-tier -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 10.0.64.11/32 ! -i br-formateur -o br-formateur -p tcp -m tcp --dport 9000 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-nextcloud ! -o br-nextcloud -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-dawantv ! -o br-dawantv -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-formateur ! -o br-formateur -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-proxy-tier ! -o br-proxy-tier -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-prom-agent ! -o br-prom-agent -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-ha.c.e ! -o br-ha.c.e -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-nextcloud -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-dawantv -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-formateur -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-proxy-tier -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-prom-agent -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-ha.c.e -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j f2b-dawantv
-A DOCKER-USER -j f2b-nextcloud
-A DOCKER-USER -j RETURN
-A f2b-sshd -s 201.148.20.53/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 210.79.191.35/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
COMMIT
# Completed on Thu Jan 23 11:39:41 2025
# Generated by iptables-save v1.8.7 on Thu Jan 23 11:39:41 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.0.27.0/28 ! -o br-nextcloud -j MASQUERADE
-A POSTROUTING -s 10.0.63.8/29 ! -o br-dawantv -j MASQUERADE
-A POSTROUTING -s 10.0.64.8/29 ! -o br-formateur -j MASQUERADE
-A POSTROUTING -s 10.0.166.0/24 ! -o br-proxy-tier -j MASQUERADE
-A POSTROUTING -s 10.0.10.8/29 ! -o br-prom-agent -j MASQUERADE
-A POSTROUTING -s 10.0.72.8/29 ! -o br-ha.c.e -j MASQUERADE
-A POSTROUTING -s 10.0.72.11/32 -d 10.0.72.11/32 -p tcp -m tcp --dport 9664 -j MASQUERADE
-A POSTROUTING -s 10.0.10.11/32 -d 10.0.10.11/32 -p tcp -m tcp --dport 9256 -j MASQUERADE
-A POSTROUTING -s 10.0.10.12/32 -d 10.0.10.12/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 10.0.166.11/32 -d 10.0.166.11/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A POSTROUTING -s 10.0.166.11/32 -d 10.0.166.11/32 -p udp -m udp --dport 443 -j MASQUERADE
-A POSTROUTING -s 10.0.166.11/32 -d 10.0.166.11/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 10.0.64.11/32 -d 10.0.64.11/32 -p tcp -m tcp --dport 9000 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-nextcloud -j RETURN
-A DOCKER -i br-dawantv -j RETURN
-A DOCKER -i br-formateur -j RETURN
-A DOCKER -i br-proxy-tier -j RETURN
-A DOCKER -i br-prom-agent -j RETURN
-A DOCKER -i br-ha.c.e -j RETURN
-A DOCKER ! -i br-prom-agent -p tcp -m tcp --dport 9256 -j DNAT --to-destination 10.0.10.11:9256
-A DOCKER ! -i br-ha.c.e -p tcp -m tcp --dport 9664 -j DNAT --to-destination 10.0.72.11:9664
-A DOCKER ! -i br-prom-agent -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.0.10.12:8080
-A DOCKER ! -i br-proxy-tier -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.0.166.11:443
-A DOCKER ! -i br-proxy-tier -p udp -m udp --dport 443 -j DNAT --to-destination 10.0.166.11:443
-A DOCKER ! -i br-proxy-tier -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.0.166.11:80
-A DOCKER ! -i br-formateur -p tcp -m tcp --dport 8009 -j DNAT --to-destination 10.0.64.11:9000
COMMIT
# Completed on Thu Jan 23 11:39:41 2025
